test/invalid/idl/invalid-allowshared.webidl
[Exposed=Window]
interface Foo {
    undefined foo([AllowShared] BufferSource source);
};
